Bug 1953722 - Key input frames to the webrtc gmp encoder off ntp timestamps instead of rtp. r=aosmond

This to avoid time going backwards due to uint32_t wraparound.

Differential Revision: https://phabricator.services.mozilla.com/D241394